增加超级明星奖池信息支持
1. 在 `ResSuperStarConfigInfo` 添加 `poolList` 字段。
2. 新增 `SuperStarPoolInfo` 类以支持奖池信息。
3. 修改 `SuperStarSendMessageManager` 以适配新的奖池信息逻辑。